# coagulate

./: .fvmrc  .gitignore  .gitlab-ci.yml  .metadata  CONTRIBUTING.md  README.md  _script_common  analysis_options.yaml  build.bat  build.sh  build.yaml  code_of_conduct.md  flutter_config.sh  flutter_launcher_icons.yaml  pubspec.yaml  reset_run.bat  reset_run.sh  run.sh  setup_linux.sh  setup_macos.sh  update_icons.sh  wasm_update.sh
android/: .gitignore  build.gradle  build.gradle.kts
architectural_decision_records/: sharing_profile_details.md
dev-setup/: _script_common  flutter_config.sh  install_protoc_linux.sh  setup_linux.sh  setup_macos.sh  setup_windows.bat  wasm_update.sh
doc/: invitations.md
integration_test/: backup_and_restore_test.dart  batch_invite_sharing_test.dart  crypto_system_assumptions_test.dart  direct_sharing_test.dart  introduction_test.dart  profile_offer_sharing_test.dart  receive_reqest_test.dart  receive_request_test.dart
ios/: Podfile  PrivacyInfo.xcprivacy
lib/: address_coordinates_form.dart  app.dart  bloc_observer.dart  contact_list.dart  contact_page.dart  debug_log.dart  ics_parser.dart  ics_parser.freezed.dart  main.dart  main_batch_management.dart  map.dart  notification_service.dart  osm.dart  oss_licenses.dart  processor.dart  profile.dart  profile_contact_bloc_observer.dart  scan_qr_code.dart  tick.dart  updates.dart  utils.dart  veilid_init.dart  veilid_init.g.dart
server/: Dockerfile  docker-compose.yml  pyproject.toml
server/coagulate_server/: config.py  main.py  schemas.py
server/tests/: api_test.py
(+452 files in other folders)
